Fix horizontal scrollbar

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -65,12 +65,8 @@
 
   font-size: 20px;
   padding: 80px 0;
-
-  .row {
-    margin-bottom: 60px;
-    text-align: center;
-  }
-
+  margin-bottom: 60px;
+  text-align: center;
 
   .table {
     tr {
